fix display on iOS

--- a/css/general.css
+++ b/css/general.css
@@ -232,6 +232,7 @@
 html {
   -moz-text-size-adjust: none;
   -webkit-text-size-adjust: none;
+  -webkit-font-smoothing: antialiased;
   text-size-adjust: none;
 }
 
