--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@
 
 .bento-key-results {
   gap: 25px;
+  height: inherit;
   justify-content: flex-start;
 }
 
